# system-integration-sd23

./: .gitignore  Makefile  README.md  go.mod  go.sum  go.work.sum  pyproject.toml  setup.py
06._Servers/python/: main.py  pyproject.toml
08._Server-To-Server/node/: app.js  package.json
08._Server-To-Server/python/: main.py  pyproject.toml
09._Environment_Variables/node/: index.js  package.json
09._Environment_Variables/python/: .env.example  pyproject.toml
10._Date/node/: index.js
10._Date/python/: main.py
11._Short_Polling/node/: app.js
11._Short_Polling/node/public/: index.html
15._Github_Webhooks/node-webhooks/: app.js
15._Github_Webhooks/python-n/: main.py  pyproject.toml
assignments/01/: main.go  main.py
assignments/01/data/: csv.csv  json.json  text.text  xml.xml  yaml.yaml
assignments/assignment1/data/: people.csv  people.json  people.text  people.xml  people.yaml
assignments/assignment1/go_solution/: go.mod  main.go  parse_module.go
assignments/assignment1/go_solution/parse_modules/: go.mod  parse_module.go
assignments/assignment1/python_solution/: dtos.py  parse_module.py  pyproject.toml
assignments/assignment1/python_solution/dtos/: dtos.py
assignments/assignment2/: pyproject.toml  server.py
assignments/assignment3/go_server/: server.go
assignments/assignment3/go_solution/: go.mod  main.go
assignments/assignment3/python_server/: main.py  pyproject.toml  server.py
assignments/assignment4/granular_access/exposee/: .terraform.lock.hcl  init.sql  main.tf  main.tfplan  mysql-fs-db.tf  outputs.tf  resource_group.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
assignments/assignment4/granular_access/exposee/documentation/: granular-access-documentation.md
assignments/assignment4/sse/: main.go
assignments/assignment5/exposee/: Makefile  documentation.md  dtos.py  events.py  exposee.db  main.py  pyproject.toml  routes.py  storage.py  test_integrator.py  tickets.db
assignments/assignment5/integrator/: Makefile  main.py
ngrok_opgave/: go.mod  main.go
