[tool.poetry]
name = "python-solution"
version = "0.1.0"
description = ""
authors = ["mslaursen <martin_laursen21@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
xmltodict = "^0.13.0"
pydantic = "^2.6.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
